# Python-GUI-with-Tkinter

./: 01_introduction.py  02_geometry.py  03_label.py  04_images_using_label.py  05_jpg_images_using_label.py  07_attributes_of_label_and_pack.py  07_label_options.py  08_pack_options.py  10_frames.py  11_buttons.py  LICENSE  README.md  pyproject.toml
06_album/: album.py
09_newspaper/: main.py
Practice Question/: 01_write_ready.py  02_button_call.py
